<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textSize="40sp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/sign_up"
        android:layout_below="@+id/x"
        android:textColor="@color/black"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="40dp"
        android:textAlignment="textStart"
        app:drawableStartCompat="@drawable/ic_baseline_account_circle_24"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textAlignment="textStart"
        app:drawableStartCompat="@drawable/ic_baseline_mail_24"
        android:inputType="textEmailAddress"
        android:autofillHints=""/>
    <EditText
        android:id="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textAlignment="textStart"
        app:drawableStartCompat="@drawable/ic_baseline_lock_24"
        app:drawableEndCompat="@drawable/ic_baseline_remove_red_eye_24"
        android:inputType="textPassword"
        android:autofillHints=""/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_below="@id/password"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/agree"
        android:layout_marginTop="25dp"
        android:layout_marginStart="100dp"
        android:layout_below="@id/password"
        android:text="@string/i_read_and_agree_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/terms"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:layout_below="@id/password"
        android:layout_toEndOf="@+id/agree"
        android:layout_marginStart="4dp"
        android:text="@string/terms_amp_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/create"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:text="@string/create_account"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"    />
    <TextView
        android:id="@+id/already"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:text="@string/already_have_an_account"
        android:layout_below="@id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/sign_in"
        android:layout_marginStart="4dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/create"
        android:layout_toEndOf="@id/already"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
